--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.8.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "astro-icon": "^1.1.0"
   }
 }
